bring back nagios4 support

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,12 @@
-statusengine.o: statusengine.c
-	LANG=C gcc -shared -o statusengine.o -fPIC  -Wall -Werror statusengine.c -luuid -levent -lgearman -ljson-c
+all: bin/nagios/statusengine.o bin/naemon/statusengine.o
+
+bin/nagios/statusengine.o: statusengine.c
+	mkdir -p bin/nagios
+	LANG=C gcc -DNAGIOS -shared -o "$@" -fPIC  -Wall -Werror statusengine.c -luuid -levent -lgearman -ljson-c
+
+bin/naemon/statusengine.o: statusengine.c
+	mkdir -p bin/naemon
+	LANG=C gcc -DNAEMON -shared -o "$@" -fPIC  -Wall -Werror statusengine.c -luuid -levent -lgearman -ljson-c
 
 clean:
 	rm -f statusengine.o
