--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,7 @@ bin/naemon/statusengine.o: statusengine.c
 
 bin/naemon/statusengine-1-0-5.o: statusengine.c
 	mkdir -p bin/naemon
-	LANG=C gcc -DNAEMON105 -shared -o "$@" -fPIC  -Wall -Werror statusengine.c -luuid -levent -lgearman -ljson-c
+	LANG=C gcc -DNAEMON105 -shared -o "$@" -fPIC  -Wall -Werror statusengine.c -luuid -levent -lgearman -ljson-c -lglib-2.0 -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -lglib-2.0
 
 clean:
 	rm -f statusengine.o
