--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,10 @@ bin/nagios/statusengine.o: statusengine.c
 	mkdir -p bin/nagios
 	LANG=C gcc -DNAGIOS -shared -o "$@" -fPIC  -Wall -Werror statusengine.c -luuid -levent -lgearman -ljson-c
 
+bin/nagios/statusengine-4-1-0.o: statusengine.c
+	mkdir -p bin/nagios
+	LANG=C gcc -DNAGIOS410 -shared -o "$@" -fPIC  -Wall -Werror statusengine.c -luuid -levent -lgearman -ljson-c
+
 bin/naemon/statusengine.o: statusengine.c
 	mkdir -p bin/naemon
 	LANG=C gcc -DNAEMON -shared -o "$@" -fPIC  -Wall -Werror statusengine.c -luuid -levent -lgearman -ljson-c
