Add Naemon 1.1.0 header files

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-all: bin/nagios/statusengine.o bin/naemon/statusengine.o bin/naemon/statusengine-1-0-5.o
+all: bin/nagios/statusengine.o bin/naemon/statusengine.o bin/naemon/statusengine-1-0-5.o bin/naemon/statusengine-1-1-0.o
 
 bin/nagios/statusengine.o: statusengine.c
 	mkdir -p bin/nagios
@@ -12,6 +12,10 @@ bin/naemon/statusengine.o: statusengine.c
 bin/naemon/statusengine-1-0-5.o: statusengine.c
 	mkdir -p bin/naemon
 	LANG=C gcc `pkg-config --cflags --libs glib-2.0` -DNAEMON105 -shared -o "$@" -fPIC  -Wall -Werror statusengine.c -luuid -levent -lgearman -ljson-c -lglib-2.0
+
+bin/naemon/statusengine-1-1-0.o: statusengine.c
+	mkdir -p bin/naemon
+	LANG=C gcc `pkg-config --cflags --libs glib-2.0` -DNAEMON110 -shared -o "$@" -fPIC  -Wall -Werror statusengine.c -luuid -levent -lgearman -ljson-c -lglib-2.0
 
 clean:
 	rm -f bin/nagios/statusengine.o bin/naemon/statusengine.o bin/naemon/statusengine-1-0-5.o
